@@ -23,6 +23,8 @@ java-common (0.49) UNRELEASED; urgency=low
   [ Matthias Klose ]
   * Don't blindly update to OpenJDK7 on architectures where it is not
     supported or not even built.
+  * Provide a /usr/share/java/java_defaults.mk makefile fragment for
+    supported java architectures and versions.
 
  -- Matthias Klose <doko@debian.org>  Sun, 30 Jun 2013 18:54:53 +0200
 
